--- a/ecmp.html
+++ b/ecmp.html
@@ -42,7 +42,7 @@
       .footer{font-size:13px;padding-top:15px;padding-bottom:15px;clear:both;width:auto}
 	  label {font-weight:600; font-size:14px;}
       h2{color:#f60}
-      h1{color:#ddd;font-size:22px;margin-bottom:10px;margin-top:10px}
+      h1{color:#ddd;font-size:22px;margin-bottom:5px;margin-top:10px}
       a:link{color:#f60}
       a:visited{color:#f60}
       a:hover{color:#f60}
@@ -62,7 +62,7 @@
       .header h1{max-width:100%;justify-content:center}
       .header{border:none}
       .logo-left a{margin-top:10px!important;font-size:23px}
-      .logo-left img{height:40px;width:50px;margin-top:-5px!important}
+      .logo-left img{width:40px;margin-top:-5px!important}
       h1{font-size:21px;text-align:center}
       .mymenu{width:100%!important}
       .logo{width:100%}
