--- a/mikrotik-hide-my-router-from-isp.html
+++ b/mikrotik-hide-my-router-from-isp.html
@@ -43,7 +43,7 @@
       .sidebar img{max-width:100%;height:auto;display:block;margin-left:auto;margin-right:auto}
       .footer{font-size:13px;padding-top:15px;padding-bottom:15px;text-align:left;clear:both;width:auto;color:#ddd}
       h2{color:#f60}
-      h1{color:#ddd;font-size:22px;margin-bottom:5px;margin-top:5px}
+      h1{color:#ddd;font-size:22px;margin-bottom:5px;margin-top:10px}
       a:link{color:#f60}
       a:visited{color:#f60}
       a:hover{color:#f60}
@@ -63,7 +63,7 @@
       .header h1{max-width:100%;justify-content:center;border-top:0!important}
       .header{border:none}
       .logo-left a{margin-top:10px!important;font-size:23px}
-      .logo-left img{height:40px;width:50px;margin-top:-5px!important}
+      .logo-left img{height:auto;width:40px;margin-top:-5px!important}
       h1{font-size:21px;text-align:center}
       .mymenu{width:100%!important}
       .logo{width:100%}
