--- a/pcc.html
+++ b/pcc.html
@@ -35,14 +35,14 @@
       .logo{margin-top:10px;margin-bottom:5px;color:#ddd;text-decoration:none;font-size:25px;font-weight:700}
       .logo a{color:#ddd!important;text-decoration:none!important}
       #wrap{max-width:900px;margin:0 auto;color:#ddd; padding:0 5px 0 5px}
-      .header{height:auto;width:100%;margin-top:0;margin-bottom:12px;border-top:1px solid #555}
+      .header{height:auto;width:100%;margin-top:0;margin-bottom:0px;border-top:0px solid #555}
       .main-wrap{display:flex}
       .content{float:right;width:60%;padding:15px;border-top:1px solid #bbb;border-bottom:1px solid #bbb;border-right:1px solid #bbb;background:#ddd;height:auto;color:#333;border-radius:0 5px 5px 0}
       .sidebar{float:left;width:40%;background-color:#ddd;border:1px solid #bbb;height:auto;color:#333;border-radius:5px 0 0 5px;padding:15px}
       .footer{font-size:13px;padding-top:15px;padding-bottom:15px;clear:both;width:auto}
       label {font-weight:600; font-size:14px;}
       h2{color:#f60}
-      h1{color:#ddd;font-size:22px;margin-bottom:10px;margin-top:10px}
+      h1{color:#ddd;font-size:22px;margin-bottom:5px;margin-top:5px; font-weight:700}
       a:link{color:#f60}
       a:visited{color:#f60}
       a:hover{color:#f60}
@@ -62,7 +62,7 @@
       .header h1{max-width:100%;justify-content:center}
       .header{border:none}
       .logo-left a{margin-top:10px!important;font-size:23px}
-      .logo-left img{height:40px;width:50px;margin-top:-5px!important}
+      .logo-left img{height:auto;width:41px;margin-top:-5px!important}
       h1{font-size:21px;text-align:center}
       .mymenu{width:100%!important}
       .logo{width:100%}
@@ -74,7 +74,7 @@
       button{margin-bottom:5px}
       h1{font-size:19px}
       .logo-left a{margin-top:10px!important;font-size:20px}
-      .logo-left img{height:auto;width:40px;margin-top:-5px!important}
+      .logo-left img{height:auto;width:41px;margin-top:-5px!important}
       .mikrotik-logo{display:flex;justify-content:center;margin-top:15px}
       .show-homepage-menu{display:flex;justify-content:center;width:100%;clear:both}
       .mymenu{padding-left:0;padding-right:0}
@@ -134,7 +134,7 @@
       </div>
       <div style="clear:both"></div>
       <div class="header">
-        <h1><span style="color:#ff6600">LB PCC</span> / LOAD BALANCING <span style="color:#ff6600">PCC</span> SCRIPT GENERATOR FOR MIKROTIK ROUTEROS</h1>
+        <h1>MIKROTIK <span style="color:#ff6600">LB PCC</span> / <span style="color:#ff6600">LOAD BALANCING PCC</span> SCRIPT GENERATOR FOR ROUTEROS</h1>
       </div>
       <div class="main-wrap">
         <div class="sidebar">
