--- a/advanced-mikrotik-protection.html
+++ b/advanced-mikrotik-protection.html
@@ -38,7 +38,7 @@
       .logo{margin-top:10px;color:#ddd;text-decoration:none;font-size:25px;font-weight:700}
       .logo a{color:#ddd!important;text-decoration:none!important}
       #wrap{max-width:900px;margin:0 auto;padding:0 5px 0 5px}
-      .header{height:auto;width:100%;margin-top:5px;margin-bottom:10px;border-top:1px solid #555}
+      .header{height:auto;width:100%;margin-top:0px;margin-bottom:0px;border-top:0px solid #555}
       .main-wrap{background-color:#f60}
       .content{width:100%;padding:20px;border-top:1px solid #bbb;background:#ddd;border-radius:0 0 5px 5px}
       .sidebar{width:100%;padding:20px;background-color:#f9f9f9;border-right:1px solid #bbb;border-radius:5px;overflow:auto}
@@ -69,7 +69,7 @@
       .header h1{max-width:100%;justify-content:center}
       .header{border:none}
       .logo-left a{margin-top:10px!important;font-size:23px}
-      .logo-left img{height:40px;width:50px;margin-top:-5px!important}
+      .logo-left img{width:40px;margin-top:-5px!important}
       h1{font-size:21px;text-align:center}
       .mymenu{width:100%!important}
       .logo{width:100%}
