--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
       }
       @media screen and (max-width:768px) {
       .logo-left a{margin-top:5px!important;font-size:20px}
-      .logo-left img{height:40px;width:50px;margin-top:-5px!important}
+      .logo-left img{width:40px;margin-top:-5px!important}
       h1{font-size:40px}
 	  h2{font-size:19px}
       .content{width:100%!important;padding:15px}
