--- a/policy-based-routing-website.html
+++ b/policy-based-routing-website.html
@@ -41,7 +41,7 @@
       .sidebar{float:left;width:100%;height:auto;padding:15px;background-color:#ccc;border:2px solid #ccc;border-radius:5px}
       .footer{font-size:13px;padding-top:10px;padding-bottom:15px;text-align:left;clear:both;width:auto;color:#ddd}
       h2{color:#f60}
-      h1{color:#ddd;font-size:22px;margin-bottom:10px;margin-top:10px}
+      h1{color:#ddd;font-size:22px;margin-bottom:5px;margin-top:10px}
       a:link{color:#f60}
       a:visited{color:#f60}
       a:hover{color:#f60}
@@ -72,7 +72,7 @@
       .header h1{max-width:100%;justify-content:center}
       .header{border:none}
       .logo-left a{margin-top:10px!important;font-size:23px}
-      .logo-left img{height:40px;width:50px;margin-top:-5px!important}
+      .logo-left img{width:40px;margin-top:-5px!important}
       h1{font-size:21px;text-align:center}
       .mymenu{width:100%!important}
       .logo{width:100%}
