--- a/remote-ip-public-static.html
+++ b/remote-ip-public-static.html
@@ -35,13 +35,13 @@
       .logo{margin-top:10px;color:#ddd;text-decoration:none;font-size:25px;font-weight:700}
       .logo a{color:#ddd!important;text-decoration:none!important}
       #wrap{max-width:750px;margin:0 auto;padding:0 5px}
-      .header{height:auto;width:100%;margin-top:5px;margin-bottom:10px;border-top:1px solid #555}
+      .header{height:auto;width:100%;margin-top:0px;margin-bottom:0px;border-top:0px solid #555}
       .main-wrap{background-color:#f60}
       .content{float:right;width:100%;padding:15px;border-top:1px solid #bbb;background:#ddd;border-radius:0 0 5px 5px}
       .sidebar{float:left;width:100%;padding:15px;background-color:#ddd;border-bottom:0 solid #bbb;border-radius:5px 5px 0 0}
       .footer{font-size:13px;padding-top:15px;padding-bottom:15px;text-align:left;clear:both;width:auto;color:#ddd}
       h2{color:#f60}
-      h1{color:#ddd;font-size:22px;margin-bottom:10px;margin-top:10px}
+      h1{color:#ddd;font-size:22px;margin-bottom:5px;margin-top:10px}
       a:link{color:#f60}
       a:visited{color:#f60}
       a:hover{color:#f60}
@@ -60,7 +60,7 @@
       .header h1{max-width:100%;justify-content:center;border-top:0!important}
       .header{border:none}
       .logo-left a{margin-top:10px!important;font-size:23px}
-      .logo-left img{height:40px;width:50px;margin-top:-5px!important}
+      .logo-left img{width:40px;margin-top:-5px!important}
       h1{font-size:21px;text-align:center}
       .mymenu{width:100%!important}
       .logo{width:100%}
