--- a/vpn-tunnel-all-traffic-script-generator.html
+++ b/vpn-tunnel-all-traffic-script-generator.html
@@ -37,7 +37,7 @@
       .logo{margin-top:15px;color:#ddd;text-decoration:none;font-size:25px;font-weight:700}
       .logo a{color:#ddd!important;text-decoration:none!important}
       #wrap{max-width:900px;margin:0 auto;padding:0 5px 0 5px}
-      .header{height:auto;width:100%;margin-top:5px;margin-bottom:10px;border-top:1px solid #555}
+      .header{height:auto;width:100%;margin-top:0px;margin-bottom:0px;border-top:0px solid #555}
       .main-wrap{display:flex}
       .content{float:right;width:66%;padding:15px;border-top:1px solid #ccc;border-bottom:1px solid #ccc;border-right:1px solid #ccc;background:#eee;height:auto;border-radius:0 5px 5px 0;font-size:14px}
       .sidebar{float:left;width:34%;background-color:#eee;border:1px solid #ccc;height:auto;border-radius:5px 0 0 5px;font-size:14px;padding:15px}
@@ -66,7 +66,7 @@
       .header h1{max-width:100%;justify-content:center}
 	  .header {border:none}	  
       .logo-left a{margin-top:10px!important;font-size:23px}
-      .logo-left img{height:40px;width:50px;margin-top:-5px!important}
+      .logo-left img{width:40px;margin-top:-5px!important}
       h1{font-size:21px;text-align:center}
       .mymenu{width:100%!important}
       .logo{width:100%}
