--- a/ecmp.html
+++ b/ecmp.html
@@ -134,7 +134,7 @@
       </div>
       <div style="clear:both"></div>
       <div class="header">
-        <h1><span style="color:#ff6600">LB ECMP</span> / LOAD BALANCING <span style="color:#ff6600">ECMP</span> SCRIPT GENERATOR FOR MIKROTIK ROUTEROS</h1>
+        <h1>MIKROTIK <span style="color:#ff6600">LB ECMP</span> / <span style="color:#ff6600">LOAD BALANCING ECMP</span> SCRIPT GENERATOR FOR ROUTEROS</h1>
       </div>
       <div class="main-wrap">
         <div class="sidebar">
