--- a/nth.html
+++ b/nth.html
@@ -134,7 +134,7 @@
       </div>
       <div style="clear:both"></div>
       <div class="header">
-        <h1><span style="color:#ff6600">LB NTH</span> / LOAD BALANCING <span style="color:#ff6600">NTH</span> SCRIPT GENERATOR FOR MIKROTIK ROUTEROS</h1>
+        <h1>MIKROTIK <span style="color:#ff6600">LB NTH</span> / <span style="color:#ff6600">LOAD BALANCING NTH</span> SCRIPT GENERATOR FOR ROUTEROS</h1>
       </div>
       <div class="main-wrap">
         <div class="sidebar">
