--- a/mikrotik-burst-limit-calculator.html
+++ b/mikrotik-burst-limit-calculator.html
@@ -36,7 +36,7 @@
       .logo a{color:#ddd!important;text-decoration:none!important}
       #wrap{max-width:900px;margin:0 auto;padding:0 5px}
       .main-wrap{display:flex}
-      .header{height:auto;width:100%;margin-top:5px;margin-bottom:5px;border-top:1px solid #555}
+      .header{height:auto;width:100%;margin-top:0;margin-bottom:0px;border-top:0px solid #555}
       .main-sidebar{float:left;width:50%;height:auto;padding:10px;padding-left:15px;padding-top:10px;background-color:#ddd;border-left:1px solid #bbb;border-top:1px solid #bbb;border-bottom:1px solid #bbb;border-radius:5px 0 0 5px}
       .content{float:right;width:50%;height:auto;padding:10px;padding-left:5px;padding-right:15px;padding-top:20px;border-top:1px solid #bbb;border-bottom:1px solid #bbb;border-right:1px solid #bbb;background:#ddd;border-radius:0 5px 5px 0}
       .sidebar{float:left;width:50%;height:auto;border-right:1px solid #aaa;padding-right:15px}
