--- a/mikrotik-pcq-burst-rate-queue-size-generator.html
+++ b/mikrotik-pcq-burst-rate-queue-size-generator.html
@@ -35,7 +35,7 @@
       .logo{margin-top:10px;color:#ddd;text-decoration:none;font-size:25px;font-weight:700}
       .logo a{color:#ddd!important;text-decoration:none!important}
       #wrap{max-width:800px;margin:0 auto;padding:0 5px}
-      .header{height:auto;width:100%;margin-top:5px;margin-bottom:5px;border-top:1px solid #555}
+      .header{height:auto;width:100%;margin-top:0;margin-bottom:0px;border-top:0px solid #555}
       .main-wrap{display:flex}
       .content{width:70%;height:auto;padding:15px;border-top:1px solid #bbb;border-left:1px solid #bbb;border-right:1px solid #bbb;background:#ddd;border-radius:0 5px 5px 0;padding-top:15px}
       .sidebar{width:30%;height:auto;padding:15px;background-color:#ddd;border-left:1px solid #bbb;border-top:1px solid #bbb;border-bottom:1px solid #bbb;border-radius:5px 0 0 5px}
