--- a/mirkotik-indonesia-timezone.html
+++ b/mirkotik-indonesia-timezone.html
@@ -36,7 +36,7 @@
       .logo{margin-top:10px;color:#ddd;text-decoration:none;font-size:25px;font-weight:700}
       .logo a{color:#ddd!important;text-decoration:none!important}
       #wrap{max-width:840px;margin:0 auto;padding:0 5px 0 5px}
-      .header{height:auto;width:100%;margin-top:5px;margin-bottom:5px;border-top:1px solid #555}
+      .header{height:auto;width:100%;margin-top:0;margin-bottom:0px;border-top:0px solid #555}
       .content{float:right;width:100%;padding:10px;border-top:1px solid #bbb;background:#ddd;border-radius:5px 5px 5px 5px}
       .sidebar{max-width:100%;padding:20px;background-color:#ddd;border-bottom:0 solid #bbb;border-radius:5px 5px 5px 5px;font-size:14px}
       .sidebar img{max-width:100%;height:auto;display:block;margin-left:auto;margin-right:auto}
