--- a/pcc-calculation.html
+++ b/pcc-calculation.html
@@ -37,7 +37,7 @@
       .Menu{width:100%;border-bottom:1px solid #ccc;height:100%;padding-bottom:15px;margin-bottom:20px;font-weight:700}
       #wrap{max-width:780px;margin:0 auto;padding:0 5px 0 5px}
 	  .main-wrap{display:flex}
-      .header{height:auto;width:100%;margin-top:5px;margin-bottom:12px;border-top:1px solid #555}
+      .header{height:auto;width:100%;margin-top:0;margin-bottom:0px;border-top:0px solid #555}
       .main-wrap{background-color:#f60}
       .content{float:right;width:65%;height:auto;padding:15px;border-top:1px solid #bbb;border-bottom:1px solid #bbb;border-right:1px solid #bbb;background:#ddd;border-radius:0 5px 5px 0}
       .sidebar{float:left;width:35%;height:auto;padding:15px;background-color:#ddd;border:1px solid #bbb;border-radius:5px 0 0 5px;font-size:14px}
