--- a/mikrotik-failover-script-generator.html
+++ b/mikrotik-failover-script-generator.html
@@ -75,7 +75,7 @@
       button{margin-bottom:5px; width:100px; padding:7px}
       h1{font-size:19px}
       .logo-left a{margin-top:10px!important;font-size:20px}
-      .logo-left img{height:auto;width:40px;margin-top:-5px!important}
+      .logo-left img{width:40px;margin-top:-5px!important}
       .sidebar{padding:10px;font-size:12px}
       .mikrotik-logo{display:flex;justify-content:center;margin-top:15px}
       .show-homepage-menu{display:flex;justify-content:center;width:100%;clear:both}
