--- a/mikrotik-block-website-generator.html
+++ b/mikrotik-block-website-generator.html
@@ -35,7 +35,7 @@
       .logo{margin-top:10px;margin-bottom:5px;color:#ddd;text-decoration:none;font-size:25px;font-weight:700}
       .logo a{color:#ddd!important;text-decoration:none!important}
       #wrap{max-width:750px;margin:0 auto;padding:0 5px}
-      .header{height:auto;width:100%;margin-top:0;margin-bottom:10px;border-top:1px solid #555}
+      .header{height:auto;width:100%;margin-top:0;margin-bottom:0px;border-top:0px solid #555}
       .main-wrap{background-color:#f60}
       .content{float:left;width:100%;height:auto;padding:15px;border-top:1px solid #bbb;border-bottom:1px solid #bbb;border-right:1px solid #bbb;background:#ddd}
       .sidebar{float:left;width:100%;height:auto;padding:15px;background-color:#ccc;border:2px solid #ccc;border-radius:5px}
@@ -84,7 +84,7 @@
       button{margin-bottom:5px}
       h1{font-size:19px}
       .logo-left a{margin-top:10px!important;font-size:20px}
-      .logo-left img{height:auto;width:40px;margin-top:-5px!important}
+      .logo-left img{width:40px;margin-top:-5px!important}
       .sidebar{padding:7px}
       .mikrotik-logo{display:flex;justify-content:center;margin-top:15px}
       .show-homepage-menu{display:flex;justify-content:center;width:100%;clear:both}
