--- a/mikrotik-hide-my-router-from-isp.html
+++ b/mikrotik-hide-my-router-from-isp.html
@@ -63,7 +63,7 @@
       .header h1{max-width:100%;justify-content:center;border-top:0!important}
       .header{border:none}
       .logo-left a{margin-top:10px!important;font-size:23px}
-      .logo-left img{height:auto;width:40px;margin-top:-5px!important}
+      .logo-left img{width:40px;margin-top:-5px!important}
       h1{font-size:21px;text-align:center}
       .mymenu{width:100%!important}
       .logo{width:100%}
@@ -76,7 +76,7 @@
       .class-input{width:100% !important;display:block; margin-bottom:10px}
       h1{font-size:19px}
       .logo-left a{margin-top:10px!important;font-size:20px}
-      .logo-left img{height:auto;width:40px;margin-top:-5px!important}
+      .logo-left img{width:40px;margin-top:-5px!important}
       .sidebar{padding:10px}
       .mikrotik-logo{display:flex;justify-content:center;margin-top:15px}
       .show-homepage-menu{display:flex;justify-content:center;width:100%;clear:both}
