--- a/remote-ip-public-static.html
+++ b/remote-ip-public-static.html
@@ -72,7 +72,7 @@
       button{margin-bottom:5px}
       h1{font-size:19px}
       .logo-left a{margin-top:10px!important;font-size:20px}
-      .logo-left img{height:auto;width:40px;margin-top:-5px!important}
+      .logo-left img{width:40px;margin-top:-5px!important}
       .sidebar{padding:10px}
       .content{padding:10px}
       .mikrotik-logo{display:flex;justify-content:center;margin-top:15px}
