--- a/mikrotik/index.html
+++ b/mikrotik/index.html
@@ -462,7 +462,7 @@
           <div  class="fb-like" data-href="https://www.facebook.com/buananetmikrotik" data-width="" data-layout="button_count" data-action="like" data-size="small" data-share="false"></div>
         </div>
         <div class="logo-left">	  
-          <a href="https://buananetpbun.github.io/mikrotik"><img alt="buananetpbun.github.io" style="margin-bottom:-5px;margin-right:10px" height="40" width="50" src="../img/mylogo.png"><span style="color:#ff6600 !important">BuanaNETPBun</span>.Github.io</a>
+          <a href="https://buananetpbun.github.io/mikrotik"><img alt="buananetpbun.github.io" style="margin-bottom:-5px;margin-right:10px" width="41" src="../img/mylogo.png"><span style="color:#ff6600 !important">BuanaNETPBun</span>.Github.io</a>
         </div>
       </div>
       <div class="header">
