--- a/login/index.html
+++ b/login/index.html
@@ -30,11 +30,11 @@
         </ul>
       </div>
       <div id="myProfile" class="modal-profile">
-        <div id="homepage" style="width: 700px;" class="modal-content">
+        <div id="homepage" style="width: 700px;" class="modal-content-profile">
           <div class="avatar">
             <img alt="avatar" id="myavatar" src="https://user-images.githubusercontent.com/42666125/199234814-c320e1fc-da95-489e-a955-43b82e3f4b46.png" >
           </div>
-          <span style="font-weight:bold; font-size:20px; color:#fff"><span id="profile-email" style="color:#fff"></span></span>
+          <span style="font-weight:bold; font-size:20px; color:#fff"><span id="profile-email" style="color:#292929"></span></span>
           <br><br>
           <span style="font-weight:bold; font-size:14px">E-MAIL AUTH <span style="margin-left:42px;margin-right:6px">:</span> <span id="email_Verified"></span></span> <button id="verify" style="width:100px !important; padding:5px; margin-left:5px; font-weight:bold;font-size:14px; background-color:red">Verify E-Mail</button><br><br>
           <span style="font-weight:bold;font-size:14px">E-MAIL IDENTIFIER <span style="margin-left:10px; margin-right:6px">:</span> <span style="color:#ff6600;font-weight:bold;" id="welcome-email"></span></span><br><br>
@@ -46,7 +46,7 @@
           <button  onclick="CallModalChangePasswordShow()">Set Password</button>
           <button  id="delete-user" onclick="DeleteMember()">Delete Account</button>
           <button  id="signout">Logout</button>
-          <div style="margin-top:30px; padding-top:10px;width:100%;color:#888; border-top:1px solid #555;font-weight:normal;font-size:13px">
+          <div style="margin-top:30px; padding-top:10px;width:100%;color:#292929; border-top:1px solid #bbb;font-weight:normal;font-size:13px">
             © Copyright 2020-<span id="year">2022</span> <a href="https://buananetpbun.github.io/">BuanaNETPbun.github.io</a> is proudly powered by <a href="https://pages.github.com/">GitHub Pages</a>
           </div>
           <div style="margin-top:1px; color:#666; font-size:11px;font-weight:normal">
