--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
       .footer{margin-top:20px;text-align:left;font-size:13px}
       .show-homepage-menu{margin-bottom:3px}
       .avatar img{margin-bottom:-13px;margin-left:5px;margin-right:5px;width:40px;height:40px;background-size:cover;background-repeat:no-repeat;background-position:center center;-webkit-border-radius:99em;-moz-border-radius:99em;border-radius:99em;border:2px solid #292929}
-      .terminal{margin-bottom:15px;width:100%}
+      .terminal{margin-bottom:15px;width:100%; display:none}
       .terminal img{max-width:100%;height:auto;display:block;margin-left:auto;margin-right:auto}
       @media screen and (max-width:1024px) {
       h1{font-size:45px}
