--- a/mikrotik-block-website-generator.html
+++ b/mikrotik-block-website-generator.html
@@ -47,7 +47,7 @@
       a:hover{color:#f60}
       a:active{color:#f60}
       .menu{clear:both;width:auto;padding-bottom:13px}
-      button{background-color:#f60;border:none;color:#000;padding:5px 10px;text-align:center;text-decoration:none;display:inline-block;margin:0 2px;cursor:pointer;border-radius:5px;color:#fff;font-size:14px;font-weight:bold}
+      button{background-color:#f60;border:none;color:#000;padding:5px 10px;text-align:center;text-decoration:none;display:inline-block;margin:0 2px;cursor:pointer;border-radius:5px;color:#fff;font-size:14px;font-weight:normal}
       button:hover{background-color:#ccc;color:#111;}
       .row:after{content:"";display:table;clear:both}
       input[type=text],select,textarea{width:100%;padding:5px;border:1px solid #bbb;border-radius:1px;resize:vertical;font-weight:400;margin-bottom:0px;font-size:14px!important;border-radius:5px}
@@ -177,7 +177,7 @@
           <br>
           <table id="mytable" style="font-weight:normal">
             <tr style="background-color: #ddd; " >
-              <td><button type="button" id="bt" onclick="submit()" >Generate Script</button>  <button style="margin-left:5px" id="copyscript" type="button" onclick="selectElementContents(document.getElementById('output'))">Copy All Script</button></td>
+              <td><button type="button" id="bt" onclick="submit()" >Generate </button>  <button style="margin-left:5px" id="copyscript" type="button" onclick="selectElementContents(document.getElementById('output'))">Copy Script</button></td>
             </tr>
             <tr style="font-size:15px;font-weight:normal">
               <td>
