--- a/index.html
+++ b/index.html
@@ -250,7 +250,11 @@
         <div style="margin-bottom:-15px; margin-top:-12px">
           <div class="gcse-searchresults"></div>
         </div>
-        <h1>MikroTik Router<i>OS</i> Script and Tools</h1>  
+        <h1>MikroTik Router<i>OS</i> Script and Tools</h1> 
+        <div style="margin-top:12px; margin-bottom:10px; font-size:12px; border:1px solid orange; background-color:#F5D76E; padding:5px;font-weight:600; border-radius:5px">  
+            <div style="font-size:13px;margin:10px; color:#292929; text-align:left"><span style="font-weight:700; font-size:14px; padding-left:6px; padding-right:6px; border-left:6px solid #555; border-right:6px solid #555; color:red;margin-right:5px ">DISCLAIMER</span> <span style="text-decoration:underline; font-size:12px;margin-right:5px "><i>Update: (November, 2022)</i></span> 
+              We are not responsible for any error, failure, damage or your router being locked due to intentional or accidental factors. We work independently, not under the auspices of the MikroTik Company, all problems that occur with your router are your own problems and you must accept all the risks. if you <i><u>Agree</u></i> please continue.
+          </div></div>
         <h2>MIKROTIK <span style="color:#ff6600">[</span> SCRIPT <span style="color:#ff6600">]</span> ROUTEROS DATABASE</h2>
         <div class="row">
           <div class="column">
@@ -489,13 +493,7 @@
             </div>
           </a>
         </div>
-        <div class="footer">
-        <div style="margin-top:15px; margin-bottom:15px; font-size:12px; border:1px solid orange; background-color:#F5D76E; padding:5px;font-weight:600; border-radius:5px">  
-
-            <div style="font-size:13px;margin:10px; color:#292929; text-align:left"><span style="font-weight:700; font-size:14px; padding-left:6px; padding-right:6px; border-left:6px solid #555; border-right:6px solid #555; color:red;margin-right:5px ">DISCLAIMER</span> <span style="text-decoration:underline; font-size:12px;margin-right:5px "><i>Update: (November, 2022)</i></span> 
-              We are not responsible for any error, failure, damage or your router being locked due to intentional or accidental factors. We work independently, not under the auspices of the MikroTik Company, all problems that occur with your router are your own problems and you must accept all the risks. if you <i><u>Agree</u></i> please continue.
-          </div>
-</div>			
+        <div class="footer">	
           © Copyright 2020-<span id="year">2022</span> <a href="https://buananetpbun.github.io">buananetpbun.github.io</a> is proudly powered by <a href="https://pages.github.com/">GitHub Pages</a>
         <div style="margin-top:0px; color:#777; font-size:11px">
           Project Design by Agus Ramadhani <a target="_blank" href="https://www.o-om.com/">o-om.com</a> PangkalanBun 74112, INDONESIA
