--- a/port-knocking-icmp.html
+++ b/port-knocking-icmp.html
@@ -215,7 +215,7 @@
       <div class="footer">
         <div style="margin-top:5px; margin-bottom:10px; border:1px solid orange; background-color:#F5D76E; padding:5px;font-weight:600; border-radius:5px">  
             <div style="font-size:13px;margin:10px; color:#292929; text-align:left"><span style="font-weight:700; font-size:14px; padding-left:6px; padding-right:6px; border-left:6px solid #555; border-right:6px solid #555; color:red;margin-right:5px ">DISCLAIMER</span> <span style="text-decoration:underline; font-size:12px;margin-right:5px "><i>Update: (November, 2022)</i></span> 
-             We are not responsible for any error, failure, damage or your router being locked due to intentional or accidental factors. Tool We work independently, not under the auspices of the MikroTik Company, all problems that occur on your router are your own responsibility and you must be prepared to accept all the risks. If you "Agree", please continue.
+             We are not responsible for any error, failure, damage or your router being locked due to intentional or accidental factors. Our Tool works independently, not under the auspices of the MikroTik Company, all problems that occur on your router are your own responsibility and you must be prepared to accept all the risks. If you "Agree", please continue.
           </div></div>
         <div style="margin-top:15px;">
           © Copyright 2020-<span id="year">2022</span> <a href="https://buananetpbun.github.io/">BuanaNETPbun.github.io</a> is proudly powered by <a href="https://pages.github.com/">GitHub Pages</a>
