--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
       .column a{font-weight:600}
       .row:after{content:"";display:table;clear:both}
       .member-only{cursor:help;margin-left:5px;height:13px;width:12px}
-      .footer{margin-top:20px;text-align:left;font-size:13px}
+      .footer{margin-top:15px;text-align:center;font-size:13px}
       .show-homepage-menu{margin-bottom:3px}
       .avatar img{margin-bottom:-13px;margin-left:5px;margin-right:5px;width:40px;height:40px;background-size:cover;background-repeat:no-repeat;background-position:center center;-webkit-border-radius:99em;-moz-border-radius:99em;border-radius:99em;border:2px solid #292929}
       .terminal{margin-bottom:15px;width:100%; display:none}
@@ -156,7 +156,7 @@
       .logo{width:100%}
       .logo-left{justify-content:center;display:flex;width:100%}
       .logo-right{text-align:center;width:100%}
-      .footer{margin-bottom:20px}
+      .footer{margin-bottom:15px}
       }
       @media screen and (max-width:700px) {
       h1{font-size:35px}
@@ -495,7 +495,7 @@
         </div>
         <div class="footer">	
           © Copyright 2020-<span id="year">2022</span> <a href="https://buananetpbun.github.io">buananetpbun.github.io</a> is proudly powered by <a href="https://pages.github.com/">GitHub Pages</a>
-        <div style="margin-top:0px; color:#777; font-size:11px">
+        <div style="margin-top:3px; color:#777; font-size:11px">
           Project Design by Agus Ramadhani <a target="_blank" href="https://www.o-om.com/">o-om.com</a> PangkalanBun 74112, INDONESIA
         </div>	 		  
         </div>
