--- a/mikrotik-burst-limit-calculator.html
+++ b/mikrotik-burst-limit-calculator.html
@@ -163,8 +163,8 @@
               <input onkeydown="upperCaseF(this)" type="text" id="up-max-limit" style='color: green' placeholder="512K" value="512K" onkeypress="return event.charCode != 32" onkeyup="myFunction()">
             </div>
             <div style="width:100%;">
-              <label>Burst Limit (K/M)</label>
-              <span class="tooltip"><span class="tooltiptext">Burst Limit must be more than Max Limit</span><input onkeydown="upperCaseF(this)" type="text" id="up-speed-bonus" style='color: #01A3DF;' value="1M" placeholder="1M" onkeypress="return event.charCode != 32" onkeyup="myFunction()" ></span>
+              <label>Burst Limit (K/M) <span class="tooltip"><span class="tooltiptext2">Burst Limit must be more than Max Limit</span><span style="color:green; font-size:18px; cursor:help">🛈</span></span></label>
+              <input onkeydown="upperCaseF(this)" type="text" id="up-speed-bonus" style='color: #01A3DF;' value="1M" placeholder="1M" onkeypress="return event.charCode != 32" onkeyup="myFunction()" >
             </div>
             <div style="width:100%;margin-bottom:10px;margin-top:1px">
               <label>Actual Burst Time (s)</label>
@@ -189,8 +189,8 @@
               <input onkeydown="upperCaseF(this)" type="text" id="down-max-limit" value="1M" style='color: green' placeholder="1M" onkeypress="return event.charCode != 32" onkeyup="myFunction()" >
             </div>
             <div style="width:100%; ">
-              <label>Burst Limit (K/M)</label>
-              <span class="tooltip"><span class="tooltiptext">Burst Limit must be more than Max Limit</span><input onkeydown="upperCaseF(this)" type="text" id="down-speed-bonus" style='color: #01A3DF' value="2M" placeholder="2M" onkeypress="return event.charCode != 32" onkeyup="myFunction()"></span>
+              <label>Burst Limit (K/M) <span class="tooltip"><span class="tooltiptext2">Burst Limit must be more than Max Limit</span><span style="color:green; font-size:18px;cursor:help">🛈</span></span></label>
+              <input onkeydown="upperCaseF(this)" type="text" id="down-speed-bonus" style='color: #01A3DF' value="2M" placeholder="2M" onkeypress="return event.charCode != 32" onkeyup="myFunction()">
             </div>
             <div style="width:100%;margin-bottom:10px; margin-top:1px">
               <label>Actual Burst Time (s)</label><br>
