--- a/mikrotik-burst-limit-calculator.html
+++ b/mikrotik-burst-limit-calculator.html
@@ -213,9 +213,9 @@
               <div style='color: #555; margin-bottom:3px'>----------------------------------------------------------------------------------</div>
               <span style='color: Crimson'>Actual Burst Time</span> = ( <span style='color: #191970'>Burst Threshold</span> * <span style='color: DarkViolet'>Burst Time</span> ) / <span style='color: #01A3DF'>Burst Limit</span><br>
               <div style='color: #555'>----------------------------------------------------------------------------------</div>
-              <div style="margin-top:5px; font-weight:normal">
-                <span style='color: #555; font-size:11px'>Burst Threshold = Max Limit * 3/4</span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span style='text-align:right;color: #555; font-size:11px'>K = Kbps  /  M = Mbps</span><br>
-                <span style='color: #555; font-size:11px'>Limit At = Max Limit * 1/2</span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span style='color: #555; font-size:11px'>Convert 1000Kbps = 1Mbps</span><br>
+              <div style="margin-top:5px; font-weight:bold;font-size:11px;">
+                Burst Threshold = <span style="color:#f60">( Max Limit * 3/4 )</span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;K = <span style='color:#f60'>Kbps</span>  /  M = <span style="color:#f60">Mbps</span><br>
+                Limit At = <span style="color:#f60">( Max Limit * 1/2 )</span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Convert 1000Kbps = <span style='color:#f60'>1Mbps</span><br>
               </div>
             </div>
           </div>
