--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
     <link rel="shortcut icon" href="https://buananetpbun.github.io/favicon.ico" type="image/x-icon">
     <meta name="google-site-verification" content="VjnLBZ-ypbNyJxYE9KWmaIHeQ3K-4GO4h8Ddb1zMD28" >
     <meta property="og:title" content="Free MikroTik RouterOS Online Tools Generator - BuanaNETPBun.Github.io">
-    <meta property="og:description" content="Free MikroTik RouterOS Online Tools Generator, the most complete Router tools to make it easier for you maker RouterOS Mikrotik scripts!
-      By BuanaNETPBun.Github.io">
+    <meta property="og:description" content="Free MikroTik RouterOS Online Tools Generator, the most complete Router tools to make it easier for you maker RouterOS Mikrotik scripts By BuanaNETPBun.Github.io">
     <meta property="og:image" content="https://user-images.githubusercontent.com/42666125/157738242-2c4de210-d8b6-4f7c-ab3a-b420ab3835ec.png">
     <meta property="og:image:alt" content="BuanaNETPBun.Github.io">
     <meta property="og:type" content="website">
