--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       .logo{color:#ddd;text-decoration:none;font-size:25px;font-weight:700;border-radius:5px;background:#292929 url(https://user-images.githubusercontent.com/42666125/147363663-30767ef4-09af-48d6-8ea1-ee7a1c09e90f.png) no-repeat top left;color:#ddd;margin-bottom:15px;margin-top:10px;padding:25px;clear:both}
       .logo a{color:#ddd!important;font-size:25px}
       *{box-sizing:border-box}
-      #wrap{max-width:909px;margin:0 auto;padding:0 5px}
+      #wrap{min-width:200px; max-width:909px;margin:0 auto;padding:0 5px}
       .content{max-width:100%;margin:0 auto;margin-top:20px;margin-bottom:30px;padding:30px;border-radius:5px;box-shadow:0 2px 5px 0 rgba(0,0,0,0.2),0 3px 10px 0 rgba(0,0,0,0.19);background:#fff;line-height:1.7}
       a:link{color:#f60;text-decoration:none;font-weight:700}
       a:visited{color:#f60;text-decoration:none}
