--- a/pcc.html
+++ b/pcc.html
@@ -159,7 +159,7 @@
           <div style="display:flex">
             <div style="width:100%;">
               <label>Local Options</label>
-              <select disabled style="margin-top:5px; width:100%" id="local-list" onchange="LocalAddressOption()">
+              <select style="margin-top:5px; width:100%" id="local-list" onchange="LocalAddressOption()">
                 <option value="local-list1">IP Address List</option>
                 <option value="local-list2">In. Interface</option>
                 <option value="local-list3">In. Interface List</option>
