--- a/mikrotik-hide-my-router-from-isp.html
+++ b/mikrotik-hide-my-router-from-isp.html
@@ -158,7 +158,7 @@
             <label><b>Change Router Mac Address</b></label><br>
             <span style="display:flex">
             <input style="width:100%;margin-right:2px" type="text" id="input-mac-address" value="" placeholder="52:E2:4F:28:8B:9F">
-            <button style="width:100px" type="button" onclick="genMAC()">Random</button>
+            <button style="width:100px;padding:5px;" type="button" onclick="genMAC()">Random</button>
             </span>
           </div>
         </div>
