--- a/index.html
+++ b/index.html
@@ -97,6 +97,7 @@
       .row:after{content:"";display:table;clear:both}
       .member-only{margin-left:5px;height:13px;width:12px}
       .footer{margin-top:15px;text-align:center;font-size:13px}
+	  .footer a{color:#292929}
       .show-homepage-menu{margin-bottom:3px}
       .avatar img{margin-bottom:-13px;margin-left:5px;margin-right:5px;width:40px;height:40px;background-size:cover;background-repeat:no-repeat;background-position:center center;-webkit-border-radius:99em;-moz-border-radius:99em;border-radius:99em;border:2px solid #292929}
       .terminal{margin-bottom:15px;width:100%;display:none}
@@ -105,7 +106,7 @@
       .tooltip .tooltiptext{visibility:hidden;width:150px;background-color:#555;color:#fff;text-align:center;border-radius:6px;padding:10px;position:absolute;z-index:1;bottom:125%;left:50%;margin-left:-60px;opacity:.9;transition:opacity .3s}
       .tooltip .tooltiptext::after{content:"";position:absolute;top:100%;left:50%;margin-left:-18px;border-width:5px;border-style:solid;border-color:#555 transparent transparent}
       .tooltip:hover .tooltiptext{visibility:visible;opacity:.9}
-      .disclaimer{margin-top:0px;margin-bottom:25px;border:1px solid orange;background-color:#F5D76E;padding:10px;border-radius:5px;font-size:14px}
+      .disclaimer{margin-top:0px;margin-bottom:25px;border:1px solid #bbb;background-color:#f9f9f9;padding:10px;border-radius:5px;font-size:14px}
       @media screen and (max-width:1024px) {
       h1{font-size:45px}
       h2{font-size:20px}
@@ -170,7 +171,7 @@
         <div class="show-login-menu" id="show-login-menu">
           <button style="width:100px !important;  padding:6px; margin:4px; font-weight:bold;font-size:14px; margin-left:12px !important" onclick="callmodalLogin();showLogin()">Login</button>
           <button style="width:100px !important; padding:6px; margin:4px; font-weight:bold;font-size:14px" onclick="javascript:callmodalLogin();showRegistration()">Sign Up</button>
-          <span class="text-join-now" style="font-size:14px; color:#ff6600; font-weight:bold; margin-left:5px">Get your member now, it's free.</span>
+          <span class="text-join-now" style="font-size:14px; font-weight:bold; margin-left:5px">Get your member now, it's free.</span>
         </div>
         <div class="show-homepage-menu">
           <div id="homepage" class="hide">
