--- a/index.html
+++ b/index.html
@@ -97,7 +97,6 @@
       .row:after{content:"";display:table;clear:both}
       .member-only{margin-left:5px;height:13px;width:12px}
       .footer{margin-top:15px;text-align:center;font-size:13px}
-	  .footer a{color:#292929}
       .show-homepage-menu{margin-bottom:3px}
       .avatar img{margin-bottom:-13px;margin-left:5px;margin-right:5px;width:40px;height:40px;background-size:cover;background-repeat:no-repeat;background-position:center center;-webkit-border-radius:99em;-moz-border-radius:99em;border-radius:99em;border:2px solid #292929}
       .terminal{margin-bottom:15px;width:100%;display:none}
@@ -211,7 +210,7 @@
             <a class="github-button" href="https://github.com/sponsors/buananetpbun" data-icon="octicon-heart" aria-label="Sponsor">Sponsor</a>		
           </div>
           <div class="logo-left">	  
-            <a href="https://buananetpbun.github.io"><img alt="buananetpbun.github.io" style="float:left; margin-top:-10px;margin-right:5px" width="71" src="./img/mylogo.png"><span style="color:#ff6600 !important">BuanaNETPBun</span>.Github.io</a>
+            <a href="https://buananetpbun.github.io"><img alt="buananetpbun.github.io" style="float:left; margin-top:-10px;margin-right:5px" width="71" src="./img/mylogo.png"><span style="color:#ff6600 !important">buananetpbun</span>.Github.io</a>
           </div>
         </div>
         <div style="clear:both;"></div>
