--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
         <div style="margin-bottom:-30px; margin-top:-12px">
           <div class="gcse-searchresults"></div>
         </div>
-        <h2>MIKROTIK <span style="color:#ff6600">[</span> SCRIPT <span style="color:#ff6600">]</span> ROUTEROS DATABASE</h2>
+        <h2>MIKROTIK ROUTEROS SCRIPT DATABASE</h2>
         <div class="row">
           <div class="column">
             <p><a target="_blank"  href="https://buananetpbun.github.io/mikrotik">MikroTik RouterOS Script DataBase</a><img class="member-only" src="./img/user.png"></p>
@@ -226,7 +226,7 @@
             <p><a target="_blank"  href="https://router-os.github.io/">MikroTik RouterOS Search Script</a></p>
           </div>
         </div>
-        <h2>MIKROTIK ROUTEROS SCRIPT GENERATOR</h2>
+        <h2>MIKROTIK ROUTEROS GENERATOR TOOLS</h2>
         <span style="font-size:16px;font-weight:600;">☰ ROUTE <span style="color:#ff6600">//</span> MANGLE <span style="color:#ff6600">//</span> NAT</span>
         <div class="row">
           <div class="column">
