--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
         <div style="margin-bottom:-30px; margin-top:-12px">
           <div class="gcse-searchresults"></div>
         </div>
-        <h2>FIND MIKROTIK ROUTEROS SCRIPT DATABASE</h2>
+        <h2>FIND MIKROTIK ROUTEROS SCRIPT</h2>
         <div class="row">
           <div class="column">
             <p><a target="_blank"  href="https://buananetpbun.github.io/mikrotik">MikroTik RouterOS Script DataBase</a><img class="member-only" src="./img/user.png"></p>
