--- a/port-knocking-icmp.html
+++ b/port-knocking-icmp.html
@@ -85,14 +85,13 @@
       h1{font-size:19px}
       .logo-left a{margin-top:10px!important;font-size:20px}
       .logo-left img{width:40px;margin-top:-3px!important}
-      .sidebar{padding:10px;height:420px;overflow:hidden}
+      .sidebar{padding:10px;height:auto}
       .mikrotik-logo{display:flex;justify-content:center;margin-top:15px}
       .show-homepage-menu{display:flex;justify-content:center;width:100%;clear:both}
       .mymenu{padding-left:0;padding-right:0}
       .mymenu ul{background:none!important;justify-content:center;display:flex}
       }
       @media screen and (max-width:500px) {
-      .column{float:left;width:100%}
       .show-homepage-menu{display:flex;justify-content:center;width:100%}
       .avatar{display:none}
       }
