--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
         </div>
       </div>
       <div class="content">
-        <h1><span class="light">free scripting and  generator tools.<br>made for <strong>MikroTik Router<i>OS</i></strong></span></h1>
+        <h1><span class="light">free scripting and  generator tools.<br>made for <strong><i>MikroTik RouterOS</i></strong></span></h1>
         <div class="terminal">    
           <img src="./img/terminal.png" alt="MikroTik Terminal">
         </div>
@@ -411,7 +411,7 @@
           </div>
           © Copyright 2020-<span id="year">2022</span> <a href="https://buananetpbun.github.io">buananetpbun.github.io</a> is proudly powered by <a href="https://pages.github.com/">GitHub Pages</a>
           <div style="margin-top:0px; color:#777; font-size:11px">
-            Project Design by Agus Ramadhani <a target="_blank" href="https://www.o-om.com/">o-om.com</a> PangkalanBun 74112, INDONESIA
+            Project by Agus Ramadhani <a target="_blank" href="https://www.o-om.com/">o-om.com</a> PangkalanBun 74112, INDONESIA
           </div>
         </div>
       </div>
