--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
         </div>
       </div>
       <div class="content">
-        <h1><span class="light">easy scripting with generator tools.<br>made for <strong>MikroTik Router<i>OS</i></strong></span></h1>
+        <h1><span class="light">easy config with generator tools.<br>made for <strong>MikroTik Router<i>OS</i></strong></span></h1>
         <div class="terminal">    
           <img src="./img/terminal.png" alt="MikroTik Terminal">
         </div>
