--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@
             <p><a target="_blank"  href="https://buananetpbun.github.io/wifid-wms-seamless.html">Wifi.id WMS and Seamless Auto Login</a><img class="member-only" src="./img/user.png"></p>
           </div>
         </div>
-        <h2>MIKROTIK TOOLS AND LOGO DESIGNS</h2>
+        <h2>MIKROTIK TOOLS OFFICIAL FOR WINDOWS </h2>
         <div class="row">
           <div class="column">
             <p><a target="_blank" rel="nofollow"  href="https://mt.lv/winbox64">Winbox-64 (64bit)</a></p>
@@ -324,7 +324,7 @@
             <p><a target="_blank" rel="nofollow"  href="https://designs.mikrotik.com/">MikroTik Logo, Walpaper, T-Shirt</a></p>
           </div>
         </div>
-        <h2>MIKROTIK MOBILE TOOLS</h2>
+        <h2>MIKROTIK MOBILE TOOLS ANDROID IPHONE</h2>
         <div class="row">
           <div class="column">
             <p><a target="_blank" rel="nofollow"  href="https://apps.apple.com/id/app/mikrotik/id1323064830?l=id">MikroTik Winbox iPhone</a></p>
