--- a/mikrotik-backup-to-mail.html
+++ b/mikrotik-backup-to-mail.html
@@ -198,7 +198,7 @@
         </div>
         <div class="content">
           <span style="margin-left:2px; margin-top:10px;font-weight:600">
-          <b><span style="color:red"><i>Attention!</i></span> </b><span style="font-size:13px">We do not send your MikroTik backup file to our E-Mail, but you can use our E-Mail server to send the file to your E-Mail. if you don't like it you can use your own E-Mail server.</span>
+          <span style="font-weight:700; font-size:14px; padding-left:6px; padding-right:6px; border-left:6px solid #555; border-right:6px solid #555; color:red;margin-right:5px ">DISCLAIMER</span><span style="font-size:13px">We do not send your MikroTik backup file to our E-Mail, but you can use our E-Mail server to send the file to your E-Mail. if you don't like it you can use your own E-Mail server.</span>
           <br><br>
           Copy-Paste the Script to the Terminal</span>
           <div class="list-output-content">
@@ -259,7 +259,7 @@
           © Copyright 2020-<span id="year">2022</span> <a href="https://buananetpbun.github.io/">BuanaNETPbun.github.io</a> is proudly powered by <a href="https://pages.github.com/">GitHub Pages</a>
         </div>
         <div style="margin-top:1px; color:#888; font-size:11px">
-          Project Design by Agus Ramadhani <a target="_blank" href="https://www.o-om.com/">o-om.com</a> PangkalanBun 74112, INDONESIA
+          Project by Agus Ramadhani <a target="_blank" href="https://www.o-om.com/">o-om.com</a> P.Bun 74112, INDONESIA
         </div>	 		
       </div>
     </div>
